feat: 금융상품 추천 기능